--- a/styles/index.css
+++ b/styles/index.css
@@ -185,21 +185,26 @@ body {
   margin-left: 16px;
 }
 .add-comment-container {
-  height: 56px;
   padding: 18px;
   width: 100%;
   border-top: 1px solid #efefef;
   margin-top: 4px;
   display: flex;
   align-items: center;
+  max-height: 70px;
 }
 .add-comment-input {
   width: 100%;
   border: 0;
   resize: none;
   margin-right: auto;
-  height: 18px;
   background-color: transparent;
+  display: flex;
+  height: 18px;
+  max-height: 60px;
+  white-space: normal;
+  margin-right: 15px;
+  font-size: 14px;
 }
 .add-comment-button {
   color: #0095f6;
