--- a/styles/index.css
+++ b/styles/index.css
@@ -88,6 +88,11 @@ body {
 .header-icon {
   margin-right: 22px;
 }
+.header-profile-pic-border {
+  border: 1px solid;
+  border-radius: 24px;
+  padding: 2px;
+}
 
 .homepage-container {
   padding-top: 84px;
