--- a/styles/index.css
+++ b/styles/index.css
@@ -37,6 +37,9 @@ body {
 .text-blue {
   color: #0095f6;
 }
+.text-red {
+  color: #ed4956;
+}
 
 .container {
   display: contents;
@@ -92,6 +95,7 @@ body {
   border: 1px solid;
   border-radius: 24px;
   padding: 2px;
+  margin-top: -2px;
 }
 
 .homepage-container {
@@ -192,6 +196,33 @@ body {
   background-color: #a8a8a8;
   border-radius: 6px;
   margin-right: 4px;
+}
+
+.modal-container {
+  position: fixed;
+  z-index: 60;
+  width: 100%;
+  top: 0px;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+}
+.modal-box {
+  max-width: 400px;
+  max-height: 336px;
+  width: 100%;
+  height: 100%;
+}
+.modal-box-item {
+  border-top: 1px solid #dbdbdb;
+}
+.modal-box-item:first-child {
+  border-top: none;
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+.modal-box-item:last-child {
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
 }
 
 @media only screen and (min-width: 1024px) {
